  * summarize sets of changes - don't reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting

------------------------------------------------------------------------------
??/??/15  tyler.je.reddy, richardjgowers, alejob, orbeckst, dotsdl,
        manuel.nuno.melo, cyanezstange, khuston

  * 0.11.0

  Enhancements
  * Added reading of Hoomd XML files (Issue #333)
    These can only act as topology information for now 
  * Tests can now detect memleaks on a per-test basis (Issue #323)
  * AtomGroups can now be pickled/unpickled (Issue #293)
  * Universes can have a __del__ method (not actually added) without
    leaking (Issue #297)
  * Added reading of DL_Poly format CONFIG and HISTORY files (Issue #298)
    These can both act as both Topology and Coordinate information
  * Timestep objects now have __eq__ method
  * coordinates.base.Timestep now can handle velocities and forces
  * Waterdynamics analysis module added, including five analysis classes: Hydrogen Bond
    Lifetimes, Water Orientational Relaxation, Angular Distribution, Mean Square 
    Displacement and Survival Probability. Documentation and test are included.
  * RMSF class added to rms analysis module
  * ProgressMeter now outputs every *interval* number of ``update`` calls
  * Created lib.mdamath for common mathematical functions.
  * All Timesteps have the has_positions has_velocities and has_forces
    boolean flags (Issue #213)
  * Timesteps can now allocate velocities and forces if they weren't
    originally created with these through the use of the has_ flags.
    (Issue #213)
  * Timesteps now store 'dt' and 'time_offset' if passed to them by Reader
    (Issues 306 and 307)
  * MDAnalysis.selection: can also be written to a NamedStream
  * Added function lib.mdamath.make_whole to "unbreak" molecules
    over periodic boundaries.

  Changes