@@ -59,6 +59,7 @@ Chronological list of authors
   - David L. Dotson
   - Carlos Yanez S.
   - Kyle J. Huston
+  - Isaac Virshup
 
 External code
 -------------
