@@ -1,0 +1,3 @@
+.. automodule:: MDAnalysis.selections.jmol
+   :members:
+   :inherited-members:
