@@ -11,11 +11,12 @@ The rules for this file:
 
 ------------------------------------------------------------------------------
 ??/??/15  tyler.je.reddy, richardjgowers, alejob, orbeckst, dotsdl,
-        manuel.nuno.melo, cyanezstange, khuston
+        manuel.nuno.melo, cyanezstange, khuston, ivirshup
 
   * 0.11.0
 
   Enhancements
+  * Added Jmol selection writer (Issue #356)
   * Added reading of Hoomd XML files (Issue #333)
     These can only act as topology information for now 
   * Tests can now detect memleaks on a per-test basis (Issue #323)
